--- a/timetable.html
+++ b/timetable.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="timetabl.css">
 </head>
 <body>
+<h1>Thời Khóa Biểu</h1>
 <table>
   <tr>
       <th rowspan="2" s>Thứ</th>
